--- a/HunterMap/Base.lproj/Main.storyboard
+++ b/HunterMap/Base.lproj/Main.storyboard
@@ -39,11 +39,14 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="w44-HD-kXT">
+                                <rect key="frame" x="0.0" y="44" width="600" height="556"/>
+                            </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uUW-xQ-hVj">
-                                <rect key="frame" x="20" y="516" width="64" height="64"/>
+                                <rect key="frame" x="20" y="532" width="48" height="48"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="64" id="8LE-RR-d0B"/>
-                                    <constraint firstAttribute="height" constant="64" id="In5-zg-KMP"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="48" id="9Bo-4O-yA4"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="48" id="FRa-JV-ft3"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                 <state key="normal" image="icon_location.png"/>
@@ -51,9 +54,6 @@
                                     <action selector="enableLocationTracking:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c5I-99-j1z"/>
                                 </connections>
                             </button>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="w44-HD-kXT">
-                                <rect key="frame" x="0.0" y="44" width="600" height="556"/>
-                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
